# email_sender_microservice

./: .gitignore  README.md  asyncapi.json  config.py  debug  docker-compose-local.yml  email_helper.py  indempotence_consumer_middleware.py  logger_config.py  main.py  output.txt  pyproject.toml  redis_connection.py
consumers/: __init__.py  email_consumer.py
schemas/: email_message.py
tests/: conftest.py  test_consumer.py  test_email_helper.py
