[project]
name = "pet-mail-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosmtplib>=4.0.2",
    "faststream[cli,kafka]>=0.5.48",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.9",
    "redis[hiredis]>=6.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
asyncio_mode = 'auto'
asyncio_default_test_loop_scope = 'session'
asyncio_default_fixture_loop_scope = 'session'